# glwrap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  vcpkg.json
assets/: sources.txt
examples/: 3d.cpp  CMakeLists.txt  mesh.cpp  rendertarget.cpp
include/: buffer.hpp  fmt.hpp  glw.hpp  glwx.hpp  log.hpp  shader.hpp  state.hpp  texture.hpp  uniforminfo.hpp  utility.hpp  vertexarray.hpp  vertexformat.hpp
include/glw/: buffer.hpp  enums.hpp  fmt.hpp  framebuffer.hpp  log.hpp  renderbuffer.hpp  shader.hpp  state.hpp  texture.hpp  uniforminfo.hpp  utility.hpp  vertexarray.hpp  vertexformat.hpp
include/glwx/: aabb.hpp  buffers.hpp  debug.hpp  indexaccessor.hpp  math.hpp  mesh.hpp  meshgen.hpp  primitive.hpp  rendertarget.hpp  shader.hpp  spriterenderer.hpp  texture.hpp  transform.hpp  transform2d.hpp  utility.hpp  vertexaccessor.hpp  window.hpp
src/: buffer.cpp  buffer.hpp  buffers.hpp  framebuffer.cpp  framebuffer.hpp  glw.hpp  glwx.hpp  imageformat.cpp  imageformat.hpp  log.cpp  log.hpp  mesh_new.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  state.cpp  state.hpp  test.cpp  texture.cpp  texture.hpp  uniforminfo.hpp  utility.cpp  utility.hpp  vertexarray.cpp  vertexarray.hpp  vertexformat.cpp  vertexformat.hpp
src/glwx/: aabb.cpp  buffers.cpp  buffers.hpp  debug.cpp  debug.hpp  indexaccessor.cpp  math.cpp  mesh.cpp  mesh.hpp  meshgen.cpp  meshgen.hpp  primitive.cpp  rendertarget.cpp  rendertarget.hpp  shader.cpp  shader.hpp  spriterenderer.cpp  texture.cpp  texture.hpp  transform.cpp  transform2d.cpp  utility.cpp  utility.hpp  vertexaccessor.cpp  vertexaccessor.hpp  window.cpp  window.hpp
subprojects/glad/: meson.build
